<resources>
    <string name="app_name">My Pharmacy</string>
    <string name="app__app_name">My Pharmacy</string>
    <string name="menu_home">Home</string>
    <string name="orders">Orders</string>
    <string name="account">Account</string>
    <string name="login_email_or_telephone">Email</string>
    <string name="login__email">Email</string>
    <string name="login__password">password</string>
    <string name="login__login">Login</string>
    <string name="login__choice_text">OR</string>
    <string name="image_default__image">Default Image</string>
    <string name="login__forgot_your_password">FORGOT PASSWORD</string>
    <string name="login__not_a_member_join_now">SIGN UP</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_account_using_google">Create account using Google</string>
    <string name="verify_phone_number">Verify Phone Number</string>
    <string name="_787292442">787292442</string>
    <string name="cart">Cart</string>
    <string name="order_with_prescription">Order with prescription</string>
    <string name="view_all">view all</string>
    <string name="price_ugx">Ugx</string>
    <string name="item_product_price">85000</string>
    <string name="sample_description">This is the product detail summary which describes a particular medicine</string>
    <string name="profile__edit">Edit</string>
    <string name="sign_out">Sign out</string>
    <string name="quantity">Quantity</string>
    <string name="exit">Exit</string>
    <string name="order_now">Order now</string>
    <string name="choose_payment_method">Choose payment method</string>
    <string name="pay_using_mobile_money">Pay using mobile money</string>
    <string name="pay_on_delivery">Pay on delivery</string>
    <string name="location">Location</string>
    <string name="total_amount">Total amount</string>
    <string name="sale_price">sale cost</string>
    <string name="delivery_cost">Delivery cost</string>
    <string name="_10">10</string>
    <string name="title_activity_category_switcher">CategorySwitcherActivity</string>
    <string name="contact_form_name">Your Name</string>
    <string name="contact_form_email">Your Email</string>
    <string name="contact_form_subject">Subject</string>
    <string name="contact_form_message">Message</string>
    <string name="contact_form_button">Send Message</string>
    <string name="call_to_order">Call To Order</string>
    <string name="view_cart">View Cart</string>
    <string name="_0">0</string>
    <string name="order_date">2020–10–25T16:58:53.000Z</string>
    <string name="order_status">PAID</string>
    <string name="payment_method">MOBILE_MONEY</string>
    <string name="_8lso392lldlild39ddl3do34">8lso392lldlILD39ddl3do34</string>
    <string name="no_acount_not">You don\'t have an account Yet!!!</string>
    <string name="todo">TODO</string>
    <string name="order_infor">Take a photo of your prescription and send to complete order</string>
    <string name="order_by_prescription">Order By Prescription</string>
    <string name="upload">upload</string>
    <string name="capture_image">Capture Image</string>
    <string name="register__user_telephone">Telephone</string>
    <string name="register__email">Email</string>
    <string name="register__password">password</string>
    <string name="register__register">Register</string>
    <string name="register__back_to_login">Already registered? Login</string>
    <string name="register__first_name">First name</string>
    <string name="register_last_name">Last name</string>
    <string name="App_ID">ca-app-pub-3474043040187258~6777426106</string>
    <string name="BANNER_ONE_UNIT_ID">ca-app-pub-3474043040187258/7906180100</string>
    <string name="LOGIN_UNIT">ca-app-pub-3474043040187258/6058745961</string>
    <string name="cosmeceuticals">Cosmeceuticals</string>
    <string name="supplements">Supplements</string>
    <string name="herbals">Herbals</string>
    <string name="otp_medication">OTP medication</string>
    <string name="prescription_only_medicines">Prescription only medicines</string>
    <string name="national_drug_register">National Drug Register</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_update_item">updateItem_Activity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="unpaid_bills_title">Unpaid Bills</string>
    <string name="paid_bills_title">Paid Bills</string>
    <string name="setup_password_activity_title">Setup Password</string>
    <string name="new_bill_customer_activity_title">Enter customer details</string>
    <string name="new_bill_activity_title">Enter items</string>
    <string name="action_create_new_bill">New bill</string>
    <string name="action_show_unpaid_bills">Show unpaid bills</string>
    <string name="action_show_paid_bills">Show paid bills</string>
    <string name="setup_new_password">Create new password :</string>
    <string name="setup_new_password_hint">New password</string>
    <string name="setup_confirm_password">Confirm password :</string>
    <string name="setup_confirm_password_hint">Re-enter password</string>
    <string name="setup_password_error">Error: Passwords do not matched!</string>
    <string name="setup_password_set">Setup successful!</string>
    <string-array name="tax_slab_list_array">
        <item>28%</item>
        <item>18%</item>
        <item>12%</item>
        <item>5%</item>
    </string-array>
    <string name="quantity_tv">Quantity</string>
    <string name="final_price_tv">Selling price</string>
    <string name="final_price_hint">Price per item</string>
    <string name="tax_slab_tv">Tax Slab</string>
    <string name="add_to_bill_btn_label">Add item to bill</string>
    <string name="finish_btn_label">Finish</string>
    <string name="customer_name_label">Customer Name</string>
    <string name="phone_number_label">Phone number</string>
    <string name="add_customer_next_label">Next</string>
    <string name="action_discard_label">Discard</string>
    <string name="enter_customer_name_error">Please enter the customer name!</string>
    <string name="invalid_phone_number_error">Enter complete 10-digit phone number!</string>
    <string name="enter_final_price_error">Enter selling price!</string>
    <string name="item_added_success">Added</string>
    <string name="serial_number_label">S No</string>
    <string name="price_label">Price</string>
    <string name="qty_label">Qty</string>
    <string name="rate_label">Rate</string>
    <string name="taxable_value_label">Taxable Value</string>
    <string name="cgst_label">CGST</string>
    <string name="sgst_label">SGST</string>
    <string name="inr">\u20B9</string>
    <string name="action_mark_as_paid_label">Mark as paid</string>
    <string name="mark_as_paid_success">Bill paid!</string>
    <string name="marked_as_paid_already">Already paid!</string>
    <string name="total_amount_before_tax_label">Total Amount Before Tax</string>
    <string name="total_cgst_label">Add: CGST</string>
    <string name="total_sgst_label">Add: SGST</string>
    <string name="total_gst_label">Total Tax Amount: GST</string>
    <string name="total_amount_label">Total Amount After Tax</string>
    <string name="enter_password_dialog_hint">Enter your password!</string>
    <string name="enter_password_dialog_ok">OK</string>
    <string name="enter_password_dialog_cancel">Cancel</string>
    <string name="invalid_password_error">Passwords do not match!</string>
    <string name="action_call_customer_label">Call</string>
    <string name="no_phone_number_error">Phone number not specified!</string>
    <string name="add_item_to_bill_error">ADD item to bill before finishing!</string>
    <string name="action_delete_bill_label">Delete</string>
    <string name="delete_bill_success">Bill deleted!</string>
    <string name="delete_bill_error">Error in deleting bill!</string>
    <string name="no_operation_specified_error">No operation specified!</string>
    <string name="item_tv">Item</string>
    <string name="item_hint">Item description</string>
    <string name="action_add_more_items_label">Add more items</string>
    <string name="action_edit_bill_item_label">Edit</string>
    <string name="done_edit_item_btn_label">Done</string>
    <string name="action_save_to_pdf_label">Save to PDF</string>
    <string name="item_label">Item Name</string>
    <string name="action_save_pdf_file_label">Save</string>
    <string name="pdf_header_tax_invoice">Tax Invoice</string>
    <string name="pdf_header_contact">8053562005</string>
    <string name="total_label">Total</string>
    <string name="invoice_date_label">Invoice Date</string>
    <string name="tnc">Terms and Conditions :</string>
    <string name="tnc1">1. Goods once sold cannot be taken back.</string>
    <string name="tnc2">2. All subject to Sonepat Jurisdiction.</string>
    <string name="enoe"><![CDATA[E. & O.E.]]></string>
    <string name="certifying_particulars_true">Certified that the particulars given above are true and correct.</string>
    <string name="for_authorised_signatory">For AJAY TANEJA</string>
    <string name="setup_business_label">Enter business name :</string>
    <string name="setup_business_hint">Eg. ABC Retail</string>
    <string name="setup_business_address_label">Enter business address :</string>
    <string name="setup_business_contact_label">Enter contact number :</string>
    <string name="action_settings">Settings</string>
    <string name="image_details_header">Details:</string>
    <string name="image_preview_header">Preview:</string>
    <string name="loading_message">Uploading image. Please wait.</string>
    <string name="dialog_select_prompt">Choose a picture</string>
    <string name="dialog_select_camera">Camera</string>
    <string name="dialog_select_gallery">Gallery</string>
    <string name="image_picker_error">Something is wrong with that image. Pick a different one please.</string>
</resources>